// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeadBlockSection tests When user navigates with selected systems query string should render back to your selection button 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
          data-testid="grid"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 164.9 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#009FE3"
                >
                  <path
                    d="M145.9 32.9h7v34.5h-7zM12 41.4h7v26h-7zM12 32.9h7v6.6h-7zM66.7 60.9c-3.6 0-6.6-3-6.6-6.6 0-3.6 3-6.6 6.6-6.6 3.6 0 6.6 3 6.6 6.6 0 3.7-3 6.6-6.6 6.6m0-20.1c-7.5 0-13.5 6-13.5 13.5s6 13.5 13.5 13.5 13.5-6 13.5-13.5c0-7.4-6-13.5-13.5-13.5M42.8 55.4c-.6 3.6-4 6-7.6 5.4-3.6-.6-6-4-5.4-7.6s4-6 7.6-5.4c2.7.5 4.9 2.5 5.4 5.3h7C49 45.7 42.4 40.2 35 40.9c-7.4.7-12.9 7.3-12.2 14.7.7 7.4 7.3 12.9 14.7 12.2 6.5-.6 11.7-5.8 12.2-12.4h-6.9zM141.6 54.3c0-7.5-6.1-13.5-13.5-13.5-7.5 0-13.5 6.1-13.5 13.5s6.1 13.5 13.5 13.5c1.7 0 3.4-.4 5-1v-8.2c-2.4 2.7-6.5 3.1-9.2.7-2.7-2.4-3.1-6.5-.7-9.2s6.5-3.1 9.2-.7c1.5 1.3 2.3 3.1 2.3 5v12.9h6.9v-13zM97.2 40.8c-7.4 0-13.5 6-13.5 13.5v22.5h6.9V54.3c0-3.7 2.9-6.7 6.6-6.7 3.7 0 6.7 2.9 6.7 6.6 0 3.7-2.9 6.7-6.6 6.7-2 0-3.9-.8-5.1-2.3v8.2c1.6.7 3.3 1 5 1 7.5 0 13.5-6.1 13.5-13.5 0-7.5-6-13.5-13.5-13.5z"
                  />
                </g>
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <a
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge backToYourSelectionBtn css-1ioi680-MuiButtonBase-root-MuiButton-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"MC: sdp.leadBlock.backToYourSelection\\",\\"action\\":\\"system-configurator-page?referer=sys_details\\"}"
                href="system-configurator-page?referer=sys_details"
                rel="noopener noreferrer"
                tabindex="0"
              >
                <span
                  class="MuiButton-startIcon Button-startIcon MuiButton-iconSizeLarge css-htszrh-MuiButton-startIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowBackIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                    />
                  </svg>
                </span>
                MC: sdp.leadBlock.backToYourSelection
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </a>
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should not render systemAttributes Card with empty uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
          data-testid="grid"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 164.9 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#009FE3"
                >
                  <path
                    d="M145.9 32.9h7v34.5h-7zM12 41.4h7v26h-7zM12 32.9h7v6.6h-7zM66.7 60.9c-3.6 0-6.6-3-6.6-6.6 0-3.6 3-6.6 6.6-6.6 3.6 0 6.6 3 6.6 6.6 0 3.7-3 6.6-6.6 6.6m0-20.1c-7.5 0-13.5 6-13.5 13.5s6 13.5 13.5 13.5 13.5-6 13.5-13.5c0-7.4-6-13.5-13.5-13.5M42.8 55.4c-.6 3.6-4 6-7.6 5.4-3.6-.6-6-4-5.4-7.6s4-6 7.6-5.4c2.7.5 4.9 2.5 5.4 5.3h7C49 45.7 42.4 40.2 35 40.9c-7.4.7-12.9 7.3-12.2 14.7.7 7.4 7.3 12.9 14.7 12.2 6.5-.6 11.7-5.8 12.2-12.4h-6.9zM141.6 54.3c0-7.5-6.1-13.5-13.5-13.5-7.5 0-13.5 6.1-13.5 13.5s6.1 13.5 13.5 13.5c1.7 0 3.4-.4 5-1v-8.2c-2.4 2.7-6.5 3.1-9.2.7-2.7-2.4-3.1-6.5-.7-9.2s6.5-3.1 9.2-.7c1.5 1.3 2.3 3.1 2.3 5v12.9h6.9v-13zM97.2 40.8c-7.4 0-13.5 6-13.5 13.5v22.5h6.9V54.3c0-3.7 2.9-6.7 6.6-6.7 3.7 0 6.7 2.9 6.7 6.6 0 3.7-2.9 6.7-6.6 6.7-2 0-3.9-.8-5.1-2.3v8.2c1.6.7 3.3 1 5 1 7.5 0 13.5-6.1 13.5-13.5 0-7.5-6-13.5-13.5-13.5z"
                  />
                </g>
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
          data-testid="grid"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 164.9 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#009FE3"
                >
                  <path
                    d="M145.9 32.9h7v34.5h-7zM12 41.4h7v26h-7zM12 32.9h7v6.6h-7zM66.7 60.9c-3.6 0-6.6-3-6.6-6.6 0-3.6 3-6.6 6.6-6.6 3.6 0 6.6 3 6.6 6.6 0 3.7-3 6.6-6.6 6.6m0-20.1c-7.5 0-13.5 6-13.5 13.5s6 13.5 13.5 13.5 13.5-6 13.5-13.5c0-7.4-6-13.5-13.5-13.5M42.8 55.4c-.6 3.6-4 6-7.6 5.4-3.6-.6-6-4-5.4-7.6s4-6 7.6-5.4c2.7.5 4.9 2.5 5.4 5.3h7C49 45.7 42.4 40.2 35 40.9c-7.4.7-12.9 7.3-12.2 14.7.7 7.4 7.3 12.9 14.7 12.2 6.5-.6 11.7-5.8 12.2-12.4h-6.9zM141.6 54.3c0-7.5-6.1-13.5-13.5-13.5-7.5 0-13.5 6.1-13.5 13.5s6.1 13.5 13.5 13.5c1.7 0 3.4-.4 5-1v-8.2c-2.4 2.7-6.5 3.1-9.2.7-2.7-2.4-3.1-6.5-.7-9.2s6.5-3.1 9.2-.7c1.5 1.3 2.3 3.1 2.3 5v12.9h6.9v-13zM97.2 40.8c-7.4 0-13.5 6-13.5 13.5v22.5h6.9V54.3c0-3.7 2.9-6.7 6.6-6.7 3.7 0 6.7 2.9 6.7 6.6 0 3.7-2.9 6.7-6.6 6.7-2 0-3.9-.8-5.1-2.3v8.2c1.6.7 3.3 1 5 1 7.5 0 13.5-6.1 13.5-13.5 0-7.5-6-13.5-13.5-13.5z"
                  />
                </g>
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LeadBlockSection tests should render with uniqueSellingPropositions 1`] = `
<div>
  <div
    class="LeadBlockSection Section-root Section-white css-cxq310"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1kfapdf-MuiGrid-root"
          data-testid="grid"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8 css-3mvoze-MuiGrid-root"
            data-testid="grid-item"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <svg
                class="brandLogo"
                viewBox="0 0 164.9 100"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  fill="#009FE3"
                >
                  <path
                    d="M145.9 32.9h7v34.5h-7zM12 41.4h7v26h-7zM12 32.9h7v6.6h-7zM66.7 60.9c-3.6 0-6.6-3-6.6-6.6 0-3.6 3-6.6 6.6-6.6 3.6 0 6.6 3 6.6 6.6 0 3.7-3 6.6-6.6 6.6m0-20.1c-7.5 0-13.5 6-13.5 13.5s6 13.5 13.5 13.5 13.5-6 13.5-13.5c0-7.4-6-13.5-13.5-13.5M42.8 55.4c-.6 3.6-4 6-7.6 5.4-3.6-.6-6-4-5.4-7.6s4-6 7.6-5.4c2.7.5 4.9 2.5 5.4 5.3h7C49 45.7 42.4 40.2 35 40.9c-7.4.7-12.9 7.3-12.2 14.7.7 7.4 7.3 12.9 14.7 12.2 6.5-.6 11.7-5.8 12.2-12.4h-6.9zM141.6 54.3c0-7.5-6.1-13.5-13.5-13.5-7.5 0-13.5 6.1-13.5 13.5s6.1 13.5 13.5 13.5c1.7 0 3.4-.4 5-1v-8.2c-2.4 2.7-6.5 3.1-9.2.7-2.7-2.4-3.1-6.5-.7-9.2s6.5-3.1 9.2-.7c1.5 1.3 2.3 3.1 2.3 5v12.9h6.9v-13zM97.2 40.8c-7.4 0-13.5 6-13.5 13.5v22.5h6.9V54.3c0-3.7 2.9-6.7 6.6-6.7 3.7 0 6.7 2.9 6.7 6.6 0 3.7-2.9 6.7-6.6 6.7-2 0-3.9-.8-5.1-2.3v8.2c1.6.7 3.3 1 5 1 7.5 0 13.5-6.1 13.5-13.5 0-7.5-6-13.5-13.5-13.5z"
                  />
                </g>
              </svg>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <h1
                class="MuiTypography-root MuiTypography-h1 Typography-underline css-1stz9tq-MuiTypography-root"
                data-testid="typography"
              >
                lead Block section
              </h1>
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 ctaContainer css-131kag5-MuiTypography-root"
              data-testid="typography"
            >
              <button
                class="MuiButtonBase-root MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root Button-root MuiButton-contained Button-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium quotationBtn css-11nrv4h-MuiButtonBase-root-MuiButton-root"
                data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"cta label\\",\\"action\\":\\"https://www.external.co.uk\\"}"
                tabindex="0"
                type="button"
              >
                cta label
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="ArrowForwardIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                    />
                  </svg>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-4 card css-5ynyu1-MuiGrid-root"
            data-testid="system-attributes-card"
          >
            <div
              class="ColorPair-pearl css-1pt14k0"
            >
              <div
                class="css-qtgtj9"
              >
                <div
                  class="css-wepxue"
                >
                  <div
                    class="iconList"
                  >
                    <ul
                      class="css-1err4t"
                    >
                      <li
                        class="IconList-isCompact css-nggtm6"
                      >
                        <div
                          class="IconList-icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bt3ayq-MuiSvgIcon-root"
                            data-testid="CheckIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="css-1lg3fd1"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
                            data-testid="typography"
                          >
                            feature 1
                          </p>
                        </div>
                      </li>
                      <li
                        class="IconList-isCompact css-nggtm6"
                      >
                        <div
                          class="IconList-icon"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1bt3ayq-MuiSvgIcon-root"
                            data-testid="CheckIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                            />
                          </svg>
                        </div>
                        <div
                          class="css-1lg3fd1"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1  css-87ejlm-MuiTypography-root"
                            data-testid="typography"
                          >
                            feature 2
                          </p>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
